Update README.md
Fixed typo in long equivalent for `-m`

(Thanks to Roger Burdass for the eagle eyes!)